--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development concurrently \"nodemon server/server.js\" \"webpack-dev-server --config webpack.dev.js --open\"",
+    "prod": "cross-env NODE_ENV=production concurrently \"nodemon server/server.js\"",
     "build": "webpack --env.NODE_ENV=production --config webpack.prod.js",
     "lint": "eslint --fix . && echo 'Lint complete.'"
   },
