--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=development concurrently \"nodemon server/server.js\" \"webpack-dev-server --config webpack.dev.js --open\"",
     "prod": "cross-env NODE_ENV=production concurrently \"nodemon server/server.js\"",
     "build": "webpack --env.NODE_ENV=production --config webpack.prod.js",
-    "lint": "eslint --fix . && echo 'Lint complete.'",
+    "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/StumatStudio/Healthyhood#readme",
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
@@ -54,9 +55,13 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   }
 }
