--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
