--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "mongoose": "^5.9.18",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
