--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@react-google-maps/api": "^1.9.6",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
