--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
