updated App.js; index JS and CSS files; added to package.json; added testing code to server commented

--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "tachyons": "^4.12.0"
   }
 }
