--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development concurrently \"nodemon server/server.js\" \"webpack-dev-server --config webpack.dev.js --open\"",
-    "prod": "cross-env NODE_ENV=production concurrently \"nodemon server/server.js\"",
-    "build": "webpack --env.NODE_ENV=production --config webpack.prod.js",
-    "lint": "eslint --fix . && echo 'Lint complete.'"
+    "start": "cross-env NODE_ENV=production nodemon server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -35,8 +33,11 @@
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
