--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
