--- a/server/package.json
+++ b/server/package.json
@@ -61,14 +61,16 @@
     "@react-google-maps/api": "^1.9.6",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
+    "pg": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
