--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@react-google-maps/api": "^1.9.6",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
